# finances-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/workflows/: build-and-push.yml  ci.yml  codeql.yml  release.yml  uv-lock-check.yml
app/: app.py  config.py  extensions.py  forms.py  models.py  requirements.txt  routes.py
app/static/css/: style.css
app/templates/: base.html  login.html  month_details.html  months.html  register.html
podman-quadlet/: financestracker.container  financestracker.volume
tests/: conftest.py  test_app_reload.py  test_config.py  test_forms.py  test_models.py  test_smoke.py
